# ChangeLog for xfce-base/xfce4-session
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-session/ChangeLog,v 1.82 2008/12/22 17:04:27 angelos Exp $

  22 Dec 2008; Christoph Mende <angelos@gentoo.org>
  -xfce4-session-4.4.2.ebuild:
  Removed old

  15 Dec 2008; Jeroen Roovers <jer@gentoo.org> xfce4-session-4.4.3.ebuild:
  Stable for HPPA (bug #249942).

  13 Dec 2008; Raúl Porcel <armin76@gentoo.org> xfce4-session-4.4.3.ebuild:
  alpha/arm/ia64/sparc/x86 stable wrt #249942

  08 Dec 2008; Brent Baude <ranger@gentoo.org> xfce4-session-4.4.3.ebuild:
  Marking xfce4-session-4.4.3 ppc64 stable for bug 249942

  06 Dec 2008; Jeremy Olexa <darkside@gentoo.org>
  xfce4-session-4.4.3.ebuild:
  amd64 stable, bug 249942

  06 Dec 2008; nixnut <nixnut@gentoo.org> xfce4-session-4.4.3.ebuild:
  Stable on ppc wrt bug 249942

*xfce4-session-4.4.3 (30 Oct 2008)

  30 Oct 2008; Christoph Mende <angelos@gentoo.org>
  +xfce4-session-4.4.3.ebuild:
  Xfce-4.4.3 bump

  17 Dec 2007; Jeroen Roovers <jer@gentoo.org> xfce4-session-4.4.2.ebuild:
  Stable for HPPA (bug #201747).

  12 Dec 2007; Brent Baude <ranger@gentoo.org> xfce4-session-4.4.2.ebuild:
  Marking xfce4-session-4.4.2 ppc64 stable for bug 201747

  12 Dec 2007; Raúl Porcel <armin76@gentoo.org> xfce4-session-4.4.2.ebuild:
  alpha/ia64/sparc stable wrt #201747

  11 Dec 2007; Christoph Mende <angelos@gentoo.org>
  xfce4-session-4.4.1.ebuild, xfce4-session-4.4.2.ebuild:
  Added missing dependency on dev-util/intltool

  09 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  xfce4-session-4.4.2.ebuild:
  ppc stable, bug #201747

  09 Dec 2007; Dawid Węgliński <cla@gentoo.org>
  xfce4-session-4.4.2.ebuild:
  Stable on amd64/x86 (bug #201747)

*xfce4-session-4.4.2 (18 Nov 2007)

  18 Nov 2007; Samuli Suominen <drac@gentoo.org>
  +xfce4-session-4.4.2.ebuild:
  Version bump.

  07 Jun 2007; Samuli Suominen <drac@gentoo.org> xfce4-session-4.4.1.ebuild: