@@ -1,6 +1,6 @@
-DIST xfce4-session-4.4.2.tar.bz2 1252395 RMD160 9dff9a44b458f98d498da5c2b65056d1d3cdbcea SHA1 576d0515257354d1d9da646fcf29d0dc9b5065db SHA256 7394906dec7b50789407219f85143ae83b10938949d38adeecdd59eb50c8c1c6
 DIST xfce4-session-4.4.3.tar.bz2 1276089 RMD160 e0aa16b9089ae00a34f5e1df5b1b9af7a104f922 SHA1 609cf888548e1dc7f2b2318698ab86ac73fb0f4d SHA256 fa23d0e079ea3bf1b7f0e056adc6e28df04581632207face4f851269d92bffdd
-EBUILD xfce4-session-4.4.2.ebuild 1038 RMD160 a112e76288b23ace17399c0f0db9088ee530acef SHA1 6c57a3e4e742a7f6dc0cd3480667032879e8a576 SHA256 34bd2b04fc439cdd191ede53a2ba0a96cdeef7158835cc9f9c702e15778908d8
+DIST xfce4-session-4.6.0.tar.bz2 1362667 RMD160 9e07d52e845618c0eef694ae69f2a2a66932133c SHA1 3865e36b691802d74b3e86aaa4a3bb2ceff838da SHA256 950ccf85c743f40b88d3431caa3279627153b04ce7b9bf5e4ddd1f9431de4517
 EBUILD xfce4-session-4.4.3.ebuild 1031 RMD160 746fe471a445bb4dfcd478f67da291690426d0fa SHA1 fee7da3068082a194941c236804f1023a9f20018 SHA256 46018db9b93ef89c7b25cc18cfe0fce22b7b7e2665151fae21fb5b6573d742e0
-MISC ChangeLog 10359 RMD160 3ffa75557f8e5a518fa82f4bb0550c39426abfa2 SHA1 a274ac00141a2ae206c7d27289f11833ec4bfb7f SHA256 10d756420f733984459d0d3e4a0deed3649d3164144eff3e5190ea0319be5d88
+EBUILD xfce4-session-4.6.0.ebuild 952 RMD160 5dbab07c3b5253fb2a1cfcb426e241e6514e99d3 SHA1 160d115e8b2467d481ce26fabf497cc2f1212960 SHA256 72a69db80ffa9f8fde7bd240f75ad8cd6b2a65d4bba08dd36a864a55996c6d9e
+MISC ChangeLog 10495 RMD160 ebc846a074329f6c560b8fda81670cda78e34cae SHA1 8cedc2759f2bcef3c348c9648640071155f58695 SHA256 a9997f767df31bcaa798a893d5f5946d2ea968650ef71bd23944e9874831424f
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
